fixed spacing for h1 element exercise 5-1

--- a/town_hall_1/styles/c5_main.css
+++ b/town_hall_1/styles/c5_main.css
@@ -62,6 +62,8 @@ main {
 main h1 {
 	font-size: 150%;
 	padding: .3em 0;
+	margin-top: .5em;
+	margin-bottom: .5em;
 	border: 3px double #931420;
 	border-radius: 10px;
 	box-shadow: 3px 3px 4px #000000;
